Fixed wrapping in about us section

--- a/css/main.css
+++ b/css/main.css
@@ -761,9 +761,9 @@
     -webkit-justify-content: space-between;
     -ms-justify-content: space-between;
     justify-content: space-between;
-    -webkit-flex-wrap: none;
-    -ms-flex-wrap: none;
-    flex-wrap: none; }
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
     .people .developer, .people .designer {
       width: 100%; }
       .people .developer img, .people .designer img {
